--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/push-notification-ios": "1.7.1",
     "@react-native-firebase/app": "10.1.0",
     "@react-native-firebase/messaging": "10.1.0",
+    "@react-native-picker/picker": "1.9.4",
     "react-native": "0.63.3",
     "react-native-ble-plx": "2.0.1",
     "react-native-calendar-events": "2.1.0",
