--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-template",
-  "version": "6.0.0-beta.1",
+  "version": "6.0.0",
   "private": true,
   "scripts": {
     "postinstall": "npx --no-install patch-package && npx --no-install jetify"
