--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "devDependencies": {
     "detox": "17.14.5",
+    "@babel/runtime": "^7.8.4",
     "jetifier": "^1.6.3",
-    "patch-package": "^6.2.2"
+    "patch-package": "^6.2.2",
+    "metro-react-native-babel-preset": "^0.63.0"
   }
 }
