--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "6.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package && jetify"
+    "postinstall": "patch-package && jetify",
+    "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
     "@react-native-community/art": "1.2.0",
@@ -43,10 +44,11 @@
     "react-native-webview": "10.9.1"
   },
   "devDependencies": {
-    "detox": "17.14.5",
     "@babel/runtime": "^7.8.4",
+    "@mendix/native-mobile-toolkit": "^1.0.0",
+    "detox": "17.14.5",
     "jetifier": "^1.6.3",
-    "patch-package": "^6.2.2",
-    "metro-react-native-babel-preset": "^0.63.0"
+    "metro-react-native-babel-preset": "^0.63.0",
+    "patch-package": "^6.2.2"
   }
 }
