Add required libs

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@react-native-firebase/messaging": "10.1.0",
     "react-native": "0.63.3",
     "react-native-code-push": "6.3.0",
+    "react-native-device-info": "8.0.1",
+    "react-native-fast-image": "8.3.2",
     "react-native-gesture-handler": "1.8.0",
     "react-native-image-picker": "2.3.4",
+    "react-native-localize": "1.4.2",
     "react-native-reanimated": "1.13.1",
+    "react-native-safe-area-context": "3.1.8",
     "react-native-splash-screen": "3.2.0",
+    "react-native-sqlite-storage": "5.0.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "7.1.0"
   },
