Introduce firebase and crashlytics capabilities with its configurations

--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -11,7 +11,27 @@
             }
         }
     },
-    "pushNotifications": {
+    "crashlytics": {
+        "android": {
+            "gradle": {
+                "classpaths": [
+                    "com.google.firebase:firebase-crashlytics-gradle:2.2.0"
+                ],
+                "plugins": [
+                    "com.google.firebase.crashlytics"
+                ]
+            },
+            "externalDependencies": [
+                "com.google.firebase:firebase-analytics"
+            ]
+        },
+        "ios": {
+            "pods": {
+                "Firebase/Analytics": {}
+            }
+        }
+    },
+    "localNotifications": {
         "android": {
             "externalDependencies": [
                 "me.leolin:ShortcutBadger:1.1.22@aar"
@@ -42,6 +62,30 @@
                 "didReceiveNotificationResponse": [
                     "[RNCPushNotificationIOS didReceiveNotificationResponse:response];",
                     "completionHandler();"
+                ]
+            }
+        }
+    },
+    "firebaseAndroid": {
+        "android": {
+            "gradle": {
+                "classpaths": [
+                    "com.google.gms:google-services:4.3.3"
+                ],
+                "plugins": [
+                    "com.google.gms.google-services"
+                ]
+            }
+        }
+    },
+    "firebaseIos": {
+        "ios": {
+            "AppDelegate": {
+                "imports": [
+                    "#import <Firebase.h>"
+                ],
+                "didFinishLaunchingWithOptions": [
+                    "[FIRApp configure];"
                 ]
             }
         }
