--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -11,6 +11,26 @@
             }
         }
     },
+    "crashlytics": {
+        "android": {
+            "gradle": {
+                "classpaths": [
+                    "com.google.firebase:firebase-crashlytics-gradle:2.2.0"
+                ],
+                "plugins": [
+                    "com.google.firebase.crashlytics"
+                ]
+            },
+            "externalDependencies": [
+                "com.google.firebase:firebase-analytics"
+            ]
+        },
+        "ios": {
+            "pods": {
+                "Firebase/Analytics": {}
+            }
+        }
+    },
     "localNotifications": {
         "android": {
             "externalDependencies": [
@@ -36,7 +56,7 @@
             }
         }
     },
-    "pushNotifications": {
+    "firebaseAndroid": {
         "android": {
             "gradle": {
                 "classpaths": [
@@ -46,7 +66,9 @@
                     "com.google.gms.google-services"
                 ]
             }
-        },
+        }
+    },
+    "firebaseIos": {
         "ios": {
             "AppDelegate": {
                 "imports": [
