Add more required dependencies

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.3",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/async-storage": "1.12.0",
     "@react-native-firebase/app": "10.1.0",
     "@react-native-firebase/messaging": "10.1.0",
