--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "1.8.0",
     "react-native-image-picker": "2.3.4",
     "react-native-localize": "1.4.2",
+    "react-native-push-notification": "^6.1.2",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-splash-screen": "3.2.0",
