Add cron job for all actions for master

--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -1,8 +1,10 @@
 name: Android Custom Dev App CI
 
 on:
+  schedule: 
+    - cron: '0 0 * * *'
   pull_request:
-    branches: [master]
+    branches: [master, release/*]
 
 jobs:
   build:
