--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "5.1.5",
   "private": true,
   "scripts": {
-    "postinstall": "npx patch-package && npx jetify"
+    "postinstall": "patch-package && jetify"
   },
   "dependencies": {
     "@react-native-community/art": "1.2.0",
@@ -26,7 +26,7 @@
     "react-native-firebase": "5.6.0",
     "react-native-geocoder": "0.5.0",
     "react-native-gesture-handler": "1.6.0",
-    "react-native-image-picker": "2.3.1",
+    "react-native-image-picker": "2.3.4",
     "react-native-inappbrowser-reborn": "3.3.4",
     "react-native-localize": "1.3.4",
     "react-native-maps": "0.27.0",
