--- a/.github/workflows/update_releases_list.yml
+++ b/.github/workflows/update_releases_list.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Commit Releases
         uses: EndBug/add-and-commit@v7
         with:
+          branch: master
           author_name: github-actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: 'Update releases list'
