Introduce manual RNFirebase link

--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -58,6 +58,9 @@
                 ]
             },
             "pods": {
+                "RNFirebase": {
+                    "path": "react-native-firebase/ios"
+                },
                 "Firebase/Core": {
                     "version": "~> 6.19.0"
                 },
