--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "native-template",
-  "version": "6.1.6-rc4",
+  "version": "6.1.6",
   "mendix": {
-    "templateVersion": "6.1.6-rc4"
+    "templateVersion": "6.1.6"
   },
   "private": true,
   "scripts": {
