--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "native-template",
-  "version": "5.1.12",
+  "version": "5.1.13-rc1",
   "mendix": {
-    "templateVersion": "5.1.12"
+    "templateVersion": "5.1.13-rc1"
   },
   "private": true,
   "scripts": {
