--- a/ios/Podfile
+++ b/ios/Podfile
@@ -75,8 +75,10 @@ post_install do |installer|
     end
   end
 
-  ## Fix for XCode 12.5. see https://github.com/facebook/react-native/issues/28405#issuecomment-827353727
-  if XCODE_VERSION == "12.5"
+  ## Fix for XCode >=12.5. see https://github.com/facebook/react-native/issues/28405#issuecomment-827353727
+  major, minor, * = XCODE_VERSION.split('.')
+  if major.to_i > 12 || (major.to_i == 12 && minor.to_i >= 5)
+    puts "Found Xcode v#{XCODE_VERSION}. Replacing RCTCxxBridge's contents"
     find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm", "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
     find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm", "RCTBridgeModuleNameForClass(module))", "RCTBridgeModuleNameForClass(Class(module)))")
   end
@@ -85,7 +87,7 @@ end
 def find_and_replace(dir, findstr, replacestr)
   Dir[dir].each do |name|
     text = File.read(name)
-    replace = text.gsub(findstr,replacestr)
+    replace = text.gsub(findstr, replacestr)
     if text != replace
       puts "Fix: " + name
       File.open(name, "w") { |file| file.puts replace }
