--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,10 @@ dependencies {
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
 
+    // Explicit add okhttp
+    implementation("com.squareup.okhttp3:okhttp:3.14.9")
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:3.14.9")
+
     // Required for Custom Dev Apps
     devImplementation 'com.fasterxml.jackson.core:jackson-core:2.10.3'
     devImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.3'
