--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -54,6 +54,44 @@
             }
         }
     },
+    "crashlytics": {
+        "android": {
+            "gradle": {
+                "classpaths": [
+                    "com.google.firebase:firebase-crashlytics-gradle:2.0.0"
+                ],
+                "plugins": [
+                    "com.google.firebase.crashlytics"
+                ]
+            },
+            "externalDependencies": [
+                "com.google.firebase:firebase-bom:26.0.0",
+                "com.google.firebase:firebase-crashlytics:17.0.0",
+                "com.google.firebase:firebase-analytics:17.4.0"
+            ]
+        },
+        "ios": {
+            "pods": {
+                "FirebaseCrashlytics": {
+                    "version": "~> 4.0.0-beta.5"
+                },
+                "FirebaseAnalytics": {
+                    "version": "~> 6.3.1"
+                }
+            },
+            "buildPhases": [
+                {
+                    "name": "[RNFB] Crashlytics Configuration",
+                    "path": "./ios/crashlytics-config.sh",
+                    "execution_position": "after_compile",
+                    "input_files": [
+                        "${DWARF_DSYM_FOLDER_PATH}/${DWARF_DSYM_FILE_NAME}/Contents/Resources/DWARF/${TARGET_NAME}",
+                        "$(SRCROOT)/$(BUILT_PRODUCTS_DIR)/$(INFOPLIST_PATH)"
+                    ]
+                }
+            ]
+        }
+    },
     "firebaseAndroid": {
         "android": {
             "gradle": {
