--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -14,7 +14,7 @@
     "pushNotifications": {
         "android": {
             "externalDependencies": [
-                "com.google.firebase:firebase-messaging:20.1.2",
+                "com.google.firebase:firebase-messaging:20.1.6",
                 "me.leolin:ShortcutBadger:1.1.22@aar"
             ],
             "packageListEntries": {
@@ -49,7 +49,7 @@
             },
             "pods": {
                 "Firebase/Messaging": {
-                    "version": "~> 6.19.0"
+                    "version": "~> 6"
                 }
             }
         }
@@ -65,18 +65,17 @@
                 ]
             },
             "externalDependencies": [
-                "com.google.firebase:firebase-bom:26.0.0",
-                "com.google.firebase:firebase-crashlytics:17.0.0",
+                "com.google.firebase:firebase-crashlytics:17.4.0",
                 "com.google.firebase:firebase-analytics:17.4.0"
             ]
         },
         "ios": {
             "pods": {
-                "FirebaseCrashlytics": {
-                    "version": "~> 4.0.0-beta.5"
+                "Firebase/Crashlytics": {
+                    "version": "~> 6"
                 },
-                "FirebaseAnalytics": {
-                    "version": "~> 6.3.1"
+                "Firebase/Core": {
+                    "version": "~> 6"
                 }
             },
             "buildPhases": [
