--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,9 @@ def common_pods
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+  
+  # Required MendixNative dependency
+  pod 'SSZipArchive'
 
 end
 
