--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,6 +157,10 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
     implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
 
+    // Required by MendixNative
+    implementation("com.fasterxml.jackson.core:jackson-core:2.11.3")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.11.3")
+
     // Required for Custom Dev Apps
     devImplementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
     devImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
