--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -160,11 +160,9 @@ dependencies {
     // Required by MendixNative
     implementation("com.fasterxml.jackson.core:jackson-core:2.11.3")
     implementation("com.fasterxml.jackson.core:jackson-databind:2.11.3")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.11.3")
 
     // Required for Custom Dev Apps
-    devImplementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
-    devImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
-    devImplementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.4"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
 
