--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -19,6 +19,12 @@ jobs:
       - name: pod install
         run: pod install
         working-directory: ./ios
+      - name: appcenter prebuilt script test
+        shell: bash
+        working-directory: ./  
+        run: |
+          chmod +x ./appcenter-pe-build.sh
+          ./appcenter-pe-build.sh
       - name: iOS Build Action
         uses: yukiarrr/ios-build-action@v1.3.2
         with:
