--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,10 +13,11 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url "https://maven.fabric.io/public"
         }
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.4.2"
@@ -32,7 +33,7 @@ allprojects {
     repositories {
         mavenLocal()
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://www.jitpack.io" }
         maven {
             url "$rootDir/../node_modules/react-native/android"
