--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "postinstall": "patch-package && jetify",
+    "postinstall": "patch-package && jetify && jcenter-replacer",
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
