--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -8,10 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - uses: actions/checkout@v2
+      - name: switch XCode to 13
+        run: | 
+          sudo xcode-select -s /Applications/Xcode_13.0.app
       - name: npm install
         uses: Jaid/action-npm-install@v1.2.4
         with:
@@ -20,7 +23,7 @@ jobs:
         run: pod install
         working-directory: ./ios
       - name: iOS Build Action
-        uses: yukiarrr/ios-build-action@v1.3.2
+        uses: yukiarrr/ios-build-action@v1.4.0
         with:
           project-path: ./ios/nativetemplate.xcodeproj
           p12-base64: ${{ secrets.IOS_DUMMY_P12 }}
