--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "native-template",
-  "version": "6.1.2",
+  "version": "0.0.0-master",
   "mendix": {
-    "templateVersion": "6.1.2"
+    "templateVersion": "0.0.0-master"
   },
   "private": true,
   "scripts": {
