--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [master, release/*]
 
-jobs:     
+jobs:
   build:
     runs-on: ubuntu-latest
 
@@ -19,7 +19,9 @@ jobs:
       - name: npm install
         uses: Jaid/action-npm-install@v1.2.4
         with:
-              packageManager: npm
+          packageManager: npm
+      - name: Add NDK 21.0.6113669
+        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;21.0.6113669"
       - name: Build with Gradle
         run: ./gradlew assembleDevDebug
         working-directory: ./android
