Add required library

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ dependencies {
 
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-code-push')
+    implementation project(':react-native-encrypted-storage')
     implementation project(":mendixnative-release")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.webkit:android-jsc:r245459"
