--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,10 +158,11 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
 
     // Required by MendixNative
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
-    
+    implementation("com.fasterxml.jackson.core:jackson-core:2.11.3")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.11.3")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.11.3")
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+
     // Required for Custom Dev Apps
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.4"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
