--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "native-template",
-  "version": "6.2.9-beta.2",
+  "version": "6.2.9",
   "mendix": {
-    "templateVersion": "6.2.9-beta.2"
+    "templateVersion": "6.2.9"
   },
   "private": true,
   "scripts": {
