--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "native-template",
-  "version": "6.2.11-beta.0",
+  "version": "6.2.11",
   "mendix": {
-    "templateVersion": "6.2.11-beta.0"
+    "templateVersion": "6.2.11"
   },
   "private": true,
   "scripts": {
