--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,15 +128,17 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     // Flipper debugger
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
-        exclude group: 'com.facebook.fbjni'
-    }
-    debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
-        exclude group: 'com.facebook.flipper'
-        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
-    }
-    debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
-        exclude group: 'com.facebook.flipper'
+    if(USE_FLIPPER.toBoolean()) {
+        debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
+            exclude group: 'com.facebook.fbjni'
+        }
+        debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
+            exclude group: 'com.facebook.flipper'
+            exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+        }
+        debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
+            exclude group: 'com.facebook.flipper'
+        }
     }
 
     // Javascript engine
