--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,4 +20,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.configureondemand=true
 android.disableResourceValidation=true
-FLIPPER_VERSION=0.66.0
+USE_FLIPPER=false # Set to true to enable flipper in debug mode
+FLIPPER_VERSION=0.128.4
