--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -4,7 +4,7 @@
         "tag_name": "v6.2.13",
         "name": "Various hotfixes",
         "draft": false,
-        "prerelease": false,
+        "prerelease": true,
         "body": "### Fixes\r\n* We fixed an issue where using `react-native-async-storage` made the iOS build fail due to duplicated symbols being generated.\r\n* We fixed an issue where compiling an Android app for release would fail when building on a Windows machine.",
         "created_at": "2022-03-16T13:38:21Z",
         "published_at": "2022-03-16T13:43:20Z",
