--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -1,7 +1,7 @@
 [
     {
         "id": 62022731,
-        "tag_name": "v6.2.14.beta.1",
+        "tag_name": "v6.2.14-beta.1",
         "name": "",
         "draft": false,
         "prerelease": true,
