--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "react-native-splash-screen": "3.2.0",
     "react-native-sqlite-storage": "4.1.0",
     "react-native-svg": "12.0.3",
+    "react-native-system-navigation-bar": "1.0.2",
     "react-native-touch-id": "4.4.1",
     "react-native-vector-icons": "6.6.0",
-    "react-native-video": "5.0.2",
+    "react-native-video": "5.2.0",
     "react-native-view-shot": "3.1.2",
     "react-native-webview": "8.1.2"
   },
