Ensure CODE_PUSH_APK_BUILD_TIME is added

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,7 @@ android {
         versionName "1.0"
         testBuildType System.getProperty("testBuildType", "debug")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resValue 'string', "CODE_PUSH_APK_BUILD_TIME", String.format("\"%d\"", System.currentTimeMillis())
     }
     splits {
         abi {
