--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,9 +13,11 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
         maven {
             url "https://maven.fabric.io/public"
+        }
+        maven {
+            url "https://packages.rnd.mendix.com/jcenter"
         }
     }
     dependencies {
@@ -30,9 +32,8 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://www.jitpack.io" }
         maven {
             url "$rootDir/../node_modules/react-native/android"
@@ -46,5 +47,6 @@ allprojects {
         maven {
             url "$rootDir/../node_modules/detox/Detox-android"
         }
+        maven { url "https://packages.rnd.mendix.com/jcenter" }
     }
 }
