--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+source 'https://cdn.cocoapods.org/'
+
 # Uncomment the next line to define a global platform for your project
 platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
@@ -84,3 +86,6 @@ post_install do |installer|
     end
   end
 end
+
+require 'typhoeus'
+Typhoeus::Config.user_agent = 'CocoaPods'
