--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     }
     repositories {
         google()
+        mavenCentral()
         maven {
             url "https://maven.fabric.io/public"
         }
