--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -2,6 +2,7 @@ name: Release a new version
 
 on:
   workflow_dispatch:
+  push:
 
 jobs:
   releases:
@@ -18,6 +19,6 @@ jobs:
       - name: Release a new version
         run: |
           npm install -g release-it
-          release-it --increment=patch --ci --github.release --github.draft  -d
+          release-it --dry-run  --increment=patch --ci --github.release --github.draft
 
       
