--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 jobs:
-  releases:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -13,8 +13,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-          cache: 'npm'
-          cache-dependency-path: '**/package.lock'
 
       - name: Release a new version
         run: |
