add release-it workflow

--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -19,6 +19,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install -g release-it
-          release-it --dry-run  --increment=patch --ci --github.release --github.draft
+          release-it --dry-run  --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}"
 
       
