--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -2,6 +2,7 @@ name: Release a new version
 
 on:
   workflow_dispatch:
+  push:
 
 jobs:
   release:
@@ -18,6 +19,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install -g release-it
-          release-it --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}" --no-npm
+          release-it  --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}" --no-npm
 
       
