--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -19,6 +19,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install -g release-it
+          git config --global user.email "github-actions[bot]@users.noreply.github.com>"
+          git config --global user.name "github-action"
           release-it  --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}" --no-npm
 
       
