--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUBLIC_REPO_ADMIN_TOKEN }}
 
       - uses: actions/setup-node@v3
         with:
