--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
+    "@mendix/react-native-sqlite-storage": "^5.1.2",
     "@react-native-community/async-storage": "1.12.0",
+    "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.7.1",
-    "@react-native-community/cameraroll": "4.0.1",
     "@react-native-firebase/app": "10.1.0",
     "@react-native-firebase/messaging": "10.1.0",
     "react-native": "0.64.2",
@@ -23,13 +24,12 @@
     "react-native-fast-image": "8.3.2",
     "react-native-gesture-handler": "1.8.0",
     "react-native-image-picker": "4.0.3",
-    "react-native-permissions": "3.0.4",
     "react-native-localize": "1.4.2",
+    "react-native-permissions": "3.0.4",
     "react-native-push-notification": "^6.1.2",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-splash-screen": "3.2.0",
-    "react-native-sqlite-storage": "5.0.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0"
