--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-splash-screen": "3.2.0",
-    "react-native-sqlite-storage": "5.0.0",
+    "@mendix/react-native-sqlite-storage": "5.1.3",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "9.2.0",
     "react-native-video": "^5.2.0"
