--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: 1.8
       - name: actions/setup-node
-        uses: actions/setup-node
+        uses: actions/setup-node@v3
         with:
           node-version: "14.18.2"
       - name: npm install
