--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -16,10 +16,12 @@ jobs:
       - name: switch XCode to 13
         run: | 
           sudo xcode-select -s /Applications/Xcode_13.0.app
-      - name: npm install
-        uses: Jaid/action-npm-install@v1.2.4
+      - name: actions/setup-node
+        uses: actions/setup-node@v3
         with:
-          packageManager: npm
+          node-version: "14.18.2"
+      - name: npm install
+        run: npm ci
       - name: pod install
         run: pod install
         working-directory: ./ios
