--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "^7.8.4",
-    "@mendix/native-mobile-toolkit": "latest",
+    "@mendix/native-mobile-toolkit": "1.0.126-beta.1",
     "detox": "17.14.5",
     "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
