feat: add Java11 as env var

--- a/appcenter-build-config.json
+++ b/appcenter-build-config.json
@@ -36,7 +36,8 @@
     "environmentVariables": [
       { "name": "CODE_PUSH_KEY", "value": "" },
       { "name": "IS_DEV_APP", "value": false },
-      { "name": "SUPPORTS_MOBILE_TOOLKIT", "value": false }
+      { "name": "SUPPORTS_MOBILE_TOOLKIT", "value": false },
+      { "name": "JAVA_HOME", "value": "$(JAVA_HOME_11_X64)" }
     ],
     "toolsets": {
       "android": {
