Add mavenCentral to repositories

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     }
     repositories {
         google()
+        mavenCentral()
         maven {
             url "https://maven.fabric.io/public"
         }
@@ -32,6 +33,13 @@ buildscript {
 
 allprojects {
     repositories {
+        all { ArtifactRepository repo ->
+            if (repo.url.toString().startsWith("https://jcenter.bintray.com/")) {
+                project.logger.warn "Repository ${repo.url} removed."
+                remove repo
+                mavenCentral()
+            }
+        }
         google()
         mavenCentral()
         maven { url "https://www.jitpack.io" }
