Add mavenCentral to repositories

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,13 @@ buildscript {
 
 allprojects {
     repositories {
+        all { ArtifactRepository repo ->
+            if (repo.url.toString().startsWith("https://jcenter.bintray.com/")) {
+                project.logger.warn "Repository ${repo.url} removed."
+                remove repo
+                mavenCentral()
+            }
+        }
         google()
         mavenCentral()
         maven { url "https://www.jitpack.io" }
