Add print for repo address

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,7 @@ buildscript {
 allprojects {
     repositories {
         all { ArtifactRepository repo ->
+            println repo.url.toString()
             if (repo.url.toString().startsWith("https://jcenter.bintray.com/")) {
                 project.logger.warn "Repository ${repo.url} removed."
                 remove repo
