--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "native-template",
-  "version": "6.3.5",
+  "version": "7.0.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && jetify",
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "~1.0.0",
+    "@mendix/native": "/Users/Diego.Antonelli/Desktop/projects/appdev/developerapp/lib/mendix-native-2.0.1.tgz",
     "@react-native-community/async-storage": "1.12.0",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
@@ -15,11 +15,11 @@
     "@react-native-community/push-notification-ios": "1.7.1",
     "@react-native-firebase/app": "15.7.0",
     "@react-native-firebase/messaging": "15.7.0",
-    "react-native": "0.64.2",
+    "react-native": "0.70.7",
     "react-native-code-push": "7.0.5",
     "react-native-device-info": "8.0.1",
     "react-native-fast-image": "8.3.2",
-    "react-native-gesture-handler": "1.8.0",
+    "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "4.0.3",
     "react-native-permissions": "3.3.1",
     "react-native-localize": "1.4.2",
@@ -35,21 +35,22 @@
   "devDependencies": {
     "@babel/runtime": "^7.8.4",
     "@mendix/native-mobile-toolkit": "latest",
-    "detox": "17.14.5",
+    "detox": "19.13.0",
     "jetifier": "^1.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "~0.72.3",
     "patch-package": "^6.2.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "overrides": {
-    "react": "17.0.2",
-    "react-native": "0.64.2",
-    "@xmldom/xmldom": "0.8.4"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.7"
   },
   "resolutions": {
-    "react": "17.0.2",
-    "react-native": "0.64.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.7"
   }
 }
